--- a/_includes/mathjax-support.html
+++ b/_includes/mathjax-support.html
@@ -1,4 +1,4 @@
-<script type="text/x-mathjax-config">
+<!-- <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
         TeX: {
           equationNumbers: {
@@ -7,7 +7,7 @@
         },
         tex2jax: {
         inlineMath: [ ['$', '$'] ],
-        displayMath: [ ['$$', '$$'] ],
+        displayMath: [ ['\\', '\\'] ],
         processEscapes: true,
       }
     });
@@ -19,4 +19,16 @@
         });
     </script>
 <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
-</script>
+</script> -->
+
+
+<script>
+  MathJax = {
+    tex: {
+      inlineMath: [['$', '$'], ['\\(', '\\)']]
+    }
+  };
+  </script>
+  <script id="MathJax-script" async
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
+  </script>
